# mxe

plugins/python/: CMakeLists.txt  CMakeLists.txt.sip  pyconfig.h  pyqt4-1-configure-ng.patch  pyqt4-2-qpycore_qabstracteventdispatcher.patch  pyqt4.mk  python-1.patch  python-2.patch  python.mk  sip.mk
plugins/tcl.tk/: tk.mk
src/: boost.mk  cmake.mk  glib-1-fixes.patch  qwt5_qt5.mk  qwtplot3d.mk  qwtplot3d_qt4-1-fixes.patch  qwtplot3d_qt4.mk  qwtplot3d_qt5-1-fixes.patch  qwtplot3d_qt5.mk
