set(VERSION 2.7)

set(HDRS
abstract.h
asdl.h
ast.h
bitset.h
boolobject.h
bufferobject.h
bytearrayobject.h
bytes_methods.h
bytesobject.h
cellobject.h
ceval.h
classobject.h
cobject.h
codecs.h
code.h
compile.h
complexobject.h
cStringIO.h
datetime.h
descrobject.h
dictobject.h
dtoa.h
enumobject.h
errcode.h
eval.h
fileobject.h
floatobject.h
frameobject.h
funcobject.h
genobject.h
graminit.h
grammar.h
import.h
intobject.h
intrcheck.h
iterobject.h
listobject.h
longintrepr.h
longobject.h
marshal.h
memoryobject.h
metagrammar.h
methodobject.h
modsupport.h
moduleobject.h
node.h
object.h
objimpl.h
opcode.h
osdefs.h
parsetok.h
patchlevel.h
pgen.h
pgenheaders.h
pyarena.h
pycapsule.h
pyconfig.h
pyctype.h
py_curses.h
pydebug.h
pyerrors.h
pyexpat.h
pyfpe.h
pygetopt.h
pymacconfig.h
pymactoolbox.h
pymath.h
pymem.h
pyport.h
pystate.h
pystrcmp.h
pystrtod.h
Python-ast.h
Python.h
pythonrun.h
pythread.h
rangeobject.h
setobject.h
sip.h
sliceobject.h
stringobject.h
structmember.h
structseq.h
symtable.h
sysmodule.h
timefuncs.h
token.h
traceback.h
tupleobject.h
ucnhash.h
unicodeobject.h
warnings.h
weakrefobject.h
)

set(SRCS
Parser/acceler.c 
Parser/grammar1.c 
Parser/intrcheck.c
Parser/listnode.c
Parser/node.c 
Parser/parser.c 
Parser/parsetok.c 
Parser/bitset.c 
Parser/metagrammar.c 
Parser/firstsets.c 
Parser/grammar.c
Parser/pgen.c
Parser/myreadline.c
Parser/tokenizer.c
Python/_warnings.c
Python/Python-ast.c 
Python/asdl.c 
Python/ast.c 
Python/bltinmodule.c 
Python/ceval.c 
Python/compile.c 
Python/codecs.c 
Python/errors.c 
Python/frozen.c 
#Python/frozenmain.c 
Python/future.c 
Python/getargs.c 
Python/getcompiler.c 
Python/getcopyright.c 
Python/getplatform.c 
Python/getversion.c 
Python/graminit.c 
Python/import.c 
Python/importdl.c 
Python/marshal.c 
Python/modsupport.c 
Python/mystrtoul.c 
Python/mysnprintf.c 
Python/peephole.c 
Python/pyarena.c 
Python/pyctype.c 
Python/pyfpe.c 
Python/pymath.c 
Python/pystate.c 
Python/pythonrun.c 
Python/random.c 
Python/sigcheck.c 
Python/structmember.c 
Python/symtable.c 
Python/sysmodule.c 
Python/traceback.c 
Python/getopt.c 
Python/pystrcmp.c 
Python/pystrtod.c 
Python/dtoa.c 
Python/formatter_unicode.c 
Python/formatter_string.c 
#Python/dynload_win.c
Python/thread.c
Objects/abstract.c 
Objects/boolobject.c 
Objects/bufferobject.c 
Objects/bytes_methods.c 
Objects/bytearrayobject.c 
Objects/capsule.c 
Objects/cellobject.c 
Objects/classobject.c 
Objects/cobject.c 
Objects/codeobject.c 
Objects/complexobject.c 
Objects/descrobject.c 
Objects/enumobject.c 
Objects/exceptions.c 
Objects/genobject.c 
Objects/fileobject.c 
Objects/floatobject.c 
Objects/frameobject.c 
Objects/funcobject.c 
Objects/intobject.c 
Objects/iterobject.c 
Objects/listobject.c 
Objects/longobject.c 
Objects/dictobject.c 
Objects/memoryobject.c 
Objects/methodobject.c 
Objects/moduleobject.c 
Objects/object.c 
Objects/obmalloc.c 
Objects/rangeobject.c 
Objects/setobject.c 
Objects/sliceobject.c 
Objects/stringobject.c 
Objects/structseq.c 
Objects/tupleobject.c 
Objects/typeobject.c 
Objects/weakrefobject.c 
Objects/unicodeobject.c
Objects/unicodectype.c

Modules/mathmodule.c 
Modules/_math.c 
#Modules/atexitmodule.c 
Modules/config.c 
Modules/getpath.c 
Modules/main.c 
Modules/gcmodule.c
#Modules/threadmodule.c
#Modules/signalmodule.c
#Modules/posixmodule.c
Modules/errnomodule.c
#Modules/pwdmodule.c
Modules/_sre.c
Modules/_codecsmodule.c
Modules/_weakref.c
Modules/zipimport.c
Modules/symtablemodule.c
Modules/xxsubtype.c
Modules/getbuildinfo.c
)

add_library(python${VERSION} ${SRCS})
target_include_directories(python${VERSION} PUBLIC Include . PC)
set_target_properties(python${VERSION} PROPERTIES SUFFIX ".a")
set(COMPILE_DEFINITIONS MS_WINDOWS)

INSTALL(TARGETS python2.7 ARCHIVE DESTINATION lib INCLUDES DESTINATION
include/python${VERSION})
INSTALL(FILES pyconfig.h DESTINATION include/python${VERSION})
INSTALL(DIRECTORY Include/ DESTINATION include/python${VERSION} FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY Lib/ DESTINATION lib/python${VERSION} FILES_MATCHING PATTERN "*.py")
